# hello_cargo

./: Cargo.toml  certificate2.pfx  pgazure.crt  pgazure.csr  pgazure.key  pgazure.pem
src/: main.rs  main2.rs
